fix button spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,8 @@ body {
 button {
     vertical-align: top;
     padding: 0px;
+    margin: .15vw !important;
+    /* float: center !important; */
 }
 
 h1 {
@@ -523,7 +525,7 @@ ol li {
 .button_2a {
     height: 100%;
     width: 49%;
-    float: right;
+    float: left;
     /* font-size: 0.85vw; */
     overflow: visible;
     background-color: #115740;
@@ -538,8 +540,8 @@ ol li {
 .button_1b {
     height: 100%;
     width: 19%;
-    padding-right: 2%;
-    margin-right: 1%;
+    /* padding-right: 2%; */
+    /* margin-right: 1%; */
     float: left;
     /* font-size: 0.85vw; */
     overflow: hidden;
@@ -551,6 +553,7 @@ ol li {
     font-size: 1.7vw;
     color: white;
     /* border: thick solid #F0B323; */
+    border-right: 1vw;
 }
 
 .button_2b {
@@ -572,9 +575,9 @@ ol li {
 .button_3b {
     height: 100%;
     width: 19%;
-    padding-right: 1%;
-    /* float: right; */
-    margin-left: 2%;
+    /* padding-right: 1%; */
+    float: left;
+    /* margin-left: 2%; */
     /* font-size: 0.75vw; */
     overflow: hidden;
     background-color: #115740;
@@ -590,7 +593,7 @@ ol li {
 .button_4b {
     height: 100%;
     width: 19%;
-    /* float: right; */
+    float: left;
     /* font-size: 0.85vw; */
     overflow: visible;
     background-color: #115740;
@@ -606,7 +609,7 @@ ol li {
 .button_5b {
     height: 100%;
     width: 19%;
-    float: right;
+    float: left;
     /* font-size: 0.85vw; */
     overflow: visible;
     background-color: #115740;
